Add android flavors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,6 +48,19 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        dev {
+            dimension "default"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+        }
+        prod {
+            dimension "default"
+        }
+    }
 }
 
 flutter {
