--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,48 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
+flavorizr:
+  app:
+    android:
+      flavorDimensions: "flavor-type"
+    ios:
+  flavors:
+
+    apple:
+      app:
+        name: "Apple App"
+      android:
+        applicationId: "com.example.apple"
+      ios:
+        bundleId: "com.example.apple"
+
+    banana:
+      app:
+        name: "Banana App"
+      android:
+        applicationId: "com.example.banana"
+      ios:
+        bundleId: "com.example.banana"
+
+  instructions: [
+    "assets:download",
+    "assets:extract",
+    "android:buildGradle",
+    "android:androidManifest",
+    "android:dummyAssets",
+    "flutter:flavors",
+    "flutter:targets",
+    "ios:xcconfig",
+    "ios:buildTargets",
+    "ios:schema",
+    "ios:dummyAssets",
+    "ios:plist",
+    "ide:config",
+    "assets:clean",
+  ]
+
+
+
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
@@ -32,6 +74,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_flavorizr: 1.0.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
