Re-add app:name key because required in flutterizr

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,18 +25,24 @@ flavorizr:
   flavors:
 
     dev:
+      app:
+        name: "Dev App"
       android:
         applicationId: "com.example.dev"
       ios:
         bundleId: "com.example.dev"
 
     preprod:
+      app:
+        name: "Preprod App"
       android:
         applicationId: "com.example.preprod"
       ios:
         bundleId: "com.example.preprod"
 
     prod:
+      app:
+        name: "Prod App"
       android:
         applicationId: "com.example.prod"
       ios:
